tests/negative/semantic/array_element_type_mismatch/input.ci
void main() {
    int[] xs = [1, "a"];
}
